Gitignore + Testing sync on Brackets with a component

--- a/eaton.ui.apps.html/src/main/content/jcr_root/apps/eaton/html-components/content/product-detail-card/product-detail-card.html
+++ b/eaton.ui.apps.html/src/main/content/jcr_root/apps/eaton/html-components/content/product-detail-card/product-detail-card.html
@@ -3,9 +3,9 @@
 	<div class="product-detail-card-family container-padding smallMarginTop">
 		<div class="aem-Grid aem-Grid--12">
 			<div class="aem-GridColumn aem-GridColumn--default--6 aem-GridColumn--tablet--12 aem-GridColumn--phone--12">
-				<h1>Eaton 9PX UPS.</h1>
+				<h1>Supriya Bhat - Test</h1>
 				<div class="product-family-divider smallMarginTop"></div>
-				<div class="body-copy smallMarginTop">Reliable. Versatile. Powerful. Efficient. With double-conversion topology for constant power conditioning and up to 93% efficiency, the Eaton 9PX 700-3000 VA models support your overall goal of business continuity. It's built for scalable deployment, features a graphical LCD for local status updates and integrates with virtualized environments.Works as a rackmount or tower unit and can be combined to support all types of configurations.LCD display provides 13 measurements, 25 settings, 15 control functionalities, 6 points of identification and optional</div> 
+				<div class="body-copy smallMarginTop">Reliable. Versatile. Powerful. Efficient. With double-conversion topology for constant power conditioning and up to 93% efficiency, the Eaton 9PX 700-3000 VA models support your overall goal of business continuity. It's built for scalable deployment, features a graphical LCD for local status updates and integrates with virtualized environments.Works as a rackmount or tower unit and can be combined to support all types of configurations.LCD display provides 13 measurements, 25 settings, 15 control functionalities, 6 points of identification and optional</div>
 			</div>
 			<div class="aem-GridColumn aem-GridColumn--default--6 aem-GridColumn--tablet--12 aem-GridColumn--phone--12">
 					<img class="img-responsive intro-image" src="../../../../../../../content/dam/eaton/images/intro_image.png" alt="No image"/>
@@ -40,7 +40,7 @@
 			<div class="aem-GridColumn aem-GridColumn--default--6 aem-GridColumn--tablet--12 aem-GridColumn--phone--12">
 				<h1>Eaton 9PX UPS.</h1>
 				<div class="product-family-divider smallMarginTop"></div>
-				<div class="body-copy smallMarginTop">Reliable. Versatile. Powerful. Efficient. With double-conversion topology for constant power conditioning and up to 93% efficiency, the Eaton 9PX 700-3000 VA models support your overall goal of business continuity. It's built for scalable deployment, features a graphical LCD for local status updates and integrates with virtualized environments.</div> 
+				<div class="body-copy smallMarginTop">Reliable. Versatile. Powerful. Efficient. With double-conversion topology for constant power conditioning and up to 93% efficiency, the Eaton 9PX 700-3000 VA models support your overall goal of business continuity. It's built for scalable deployment, features a graphical LCD for local status updates and integrates with virtualized environments.</div>
 				<div class="aem-Grid aem-Grid--12 smallMarginTop">
 					<div class="aem-GridColumn aem-GridColumn--default--6 aem-GridColumn--tablet--12 aem-GridColumn--phone--12 ">
 						<button type="button" class="btn primary-button-dark">Request A Quote</button>
@@ -58,7 +58,7 @@
 
 		</div>
 	</div>
-</sly>	
+</sly>
 
 <sly data-sly-test="${properties.view == 'feature-block-1'}">
 	 <div class="extraLargeMarginTop container-padding feature-block-holder">
@@ -67,15 +67,15 @@
 
 				<h2>Core features</h2>
 				<div class="body-copy smallMarginTop">
-					Works as a rackmount or tower unit and can be combined to support all types of configurations.LCD display provides 13 measurements, 25 settings, 15 control functionalities, 6 points of identification and optional password protection.Includes remote power off (RPO) and remote on/off (ROO).Online double conversion topology works well in IT, edge networks, industrial automation, healthcare, K-12 and more.				
+					Works as a rackmount or tower unit and can be combined to support all types of configurations.LCD display provides 13 measurements, 25 settings, 15 control functionalities, 6 points of identification and optional password protection.Includes remote power off (RPO) and remote on/off (ROO).Online double conversion topology works well in IT, edge networks, industrial automation, healthcare, K-12 and more.
 
 				</div>
 
 			</div>
 			<div class="aem-GridColumn aem-GridColumn--default--6 aem-GridColumn--tablet--12 aem-GridColumn--phone--12">
 				<img src="../../../../../../../content/dam/eaton/images/feature_block_image.png" class="img-responsive featureBlockImage">
-			</div>			
-		</div>		
+			</div>
+		</div>
 	</div>
 </sly>
 <sly data-sly-test="${properties.view == 'feature-block-2'}">
@@ -91,7 +91,7 @@
 						Integrates seamlessly with Eaton's Intelligent Power Manager (IPM) software for continuous uptime of servers and virtual machines.
 						Works with Eaton's PredictPulse remote monitoring service for a second set of expert eyes to keep tabs on your equipment 24/7 and call you if there's a critical alarm.
 						Integrates with Eaton network closet and server room solutions.
-						
+
 				</div>
 				</div>
 		</div>
