Testing CSS updates via /clientlib + HTL updates

--- a/eaton.ui.apps.html/src/main/content/jcr_root/apps/eaton/html-components/content/a-sample-component/a-sample-component.html
+++ b/eaton.ui.apps.html/src/main/content/jcr_root/apps/eaton/html-components/content/a-sample-component/a-sample-component.html
@@ -4,10 +4,22 @@
 	           <h2>Welcome to building your very first component! - Eaton Dev Team</h2>
                <p class="smallMarginTop">Couple of helpful links -</p>
                 <ul>
-                    <li><a href="https://lion.app.box.com/s/g2cdmphrwv2xw8d1rdek4u1k5j8xx73e">Eaton Toolkit -</a></li>
-                    <li><a href="https://tools.publicis.sapient.com/confluence/spaces/viewspace.action?key=EATON">Eaton Confluence Page -</a></li>
-                    <li><a href="https://lion.app.box.com/files/0/f/4329536434">Eaton BOX page -</a></li>
-                    <li><a href="https://docs.adobe.com/docs/en/htl/docs/getting-started.html?wcmmode=disabled">Sightly (HTL) 101 -</a></li>
+                    <li class="smallPaddingBottom">
+                        <a class="small-link"
+                           href="https://lion.app.box.com/s/g2cdmphrwv2xw8d1rdek4u1k5j8xx73e">Eaton Toolkit -</a>
+                    </li>
+                    <li class="smallPaddingBottom">
+                        <a class="small-link"
+                           href="https://tools.publicis.sapient.com/confluence/spaces/viewspace.action?key=EATON">Eaton Confluence Page -</a>
+                    </li>
+                    <li class="smallPaddingBottom">
+                        <a class="small-link"
+                           href="https://lion.app.box.com/files/0/f/4329536434">Eaton BOX page -</a>
+                    </li>
+                    <li class="smallPaddingBottom">
+                        <a class="small-link"
+                           href="https://docs.adobe.com/docs/en/htl/docs/getting-started.html?wcmmode=disabled">Sightly (HTL) 101 -</a>
+                    </li>
                 </ul>
         </div>
     </div>
