--- a/eaton.ui.apps.html/src/main/content/jcr_root/apps/eaton/html-components/content/a-sample-component/a-sample-component.html
+++ b/eaton.ui.apps.html/src/main/content/jcr_root/apps/eaton/html-components/content/a-sample-component/a-sample-component.html
@@ -1,26 +1,20 @@
+<div>currentPageName: ${currentPage.name}</div>
+
 <div class="container-padding container-fixed smallMarginTop">
     <div class="aem-Grid aem-Grid--12">
-			<div class="aem-GridColumn aem-GridColumn--default--12 aem-GridColumn--tablet--12 aem-GridColumn--phone--12">
-	           <h2>Welcome to building your very first component! - Eaton Dev Team</h2>
-               <p class="smallMarginTop">Couple of helpful links -</p>
-                <ul>
-                    <li class="smallPaddingBottom">
-                        <a class="small-link"
-                           href="https://lion.app.box.com/s/g2cdmphrwv2xw8d1rdek4u1k5j8xx73e">Eaton Toolkit -</a>
-                    </li>
-                    <li class="smallPaddingBottom">
-                        <a class="small-link"
-                           href="https://tools.publicis.sapient.com/confluence/spaces/viewspace.action?key=EATON">Eaton Confluence Page -</a>
-                    </li>
-                    <li class="smallPaddingBottom">
-                        <a class="small-link"
-                           href="https://lion.app.box.com/files/0/f/4329536434">Eaton BOX page -</a>
-                    </li>
-                    <li class="smallPaddingBottom">
-                        <a class="small-link"
-                           href="https://docs.adobe.com/docs/en/htl/docs/getting-started.html?wcmmode=disabled">Sightly (HTL) 101 -</a>
-                    </li>
-                </ul>
+        <div class="aem-GridColumn aem-GridColumn--default--12">
+            <h2>Hola Mundo</h2>
+        </div>
+    </div>
+    <div class="aem-Grid aem-Grid--12 sample-gallery">
+        <div class="aem-GridColumn aem-GridColumn--default--6">
+            <img src="http://lorempixel.com/640/640/city/1/" alt="">
+        </div>
+        <div class="aem-GridColumn aem-GridColumn--default--4">
+            <img src="http://lorempixel.com/640/640/city/2/" alt="">
+        </div>
+        <div class="aem-GridColumn aem-GridColumn--default--2">
+            <img src="http://lorempixel.com/640/640/city/3/" alt="">
         </div>
     </div>
 </div>
