--- a/eaton.ui.apps.html/src/main/content/jcr_root/apps/eaton/html-components/content/a-tryout-component/a-tryout-component.html
+++ b/eaton.ui.apps.html/src/main/content/jcr_root/apps/eaton/html-components/content/a-tryout-component/a-tryout-component.html
@@ -1,12 +1,13 @@
-<div class="container-padding container-fixed smallMarginTop">
-    <div class="aem-Grid aem-Grid--12">
-        <div class="aem-GridColumn aem-GridColumn--default--4 aem-GridColumn--tablet--5 aem-GridColumn--phone--6">
-	        <h2>Left side</h2>
-            <p class="smallMarginTop">Left content</p>
+<div class="container-padding container-fixed smallMarginTop testimony">
+    <div id="testimonyContainer" class="aem-Grid aem-Grid--default--12 aem-Grid--tablet--8 aem-Grid--phone--1">
+        <div class="aem-GridColumn aem-GridColumn--default--6 aem-GridColumn--tablet--4 aem-GridColumn--phone--1">
+	        <h2>Featured testimony</h2>
+            <p><a id="seeMoreTestimonies" href="#">See more testimonies</a></p>
         </div>
-        <div class="aem-GridColumn aem-GridColumn--default--8 aem-GridColumn--tablet--7 aem-GridColumn--phone--6">
-	        <h2>Right side</h2>
-            <p class="smallMarginTop">Rigth content</p>
+        <div class="aem-GridColumn aem-GridColumn--default--6 aem-GridColumn--tablet--4 aem-GridColumn--phone--1">
+	        <h4 id="testimonyPerson">John Smith</h4>
+            <div id="testimonyPosition">CEO, Advance Inc.</div>
+            <div id="testimonyContent" class="smallMarginTop">"Eaton excelent products has improved our efficiency as a company and is helping us to maintaing a level of quality for our services that has been greatly praised by our clients."</div>
         </div>
     </div>
 </div>
