Adding Field Descriptions - TouchUI Dialog

--- a/eaton.ui.apps.html/src/main/content/jcr_root/apps/eaton/html-components/content/a-sample-component-views/a-sample-component-views.html
+++ b/eaton.ui.apps.html/src/main/content/jcr_root/apps/eaton/html-components/content/a-sample-component-views/a-sample-component-views.html
@@ -1,4 +1,4 @@
-<sly data-sly-test="${wcmmode.edit}">Product Detail Card Component</sly>
+<sly data-sly-test="${wcmmode.edit}">Sample Component with Views</sly>
  <sly data-sly-test="${properties.view == 'product-detail-card-family'}">
 	<div class="product-detail-card-family container-padding smallMarginTop">
 		<div class="aem-Grid aem-Grid--12">
