--- a/eaton.ui.apps.html/src/main/content/jcr_root/apps/eaton/html-components/content/a-sample-component-views/a-sample-component-views.html
+++ b/eaton.ui.apps.html/src/main/content/jcr_root/apps/eaton/html-components/content/a-sample-component-views/a-sample-component-views.html
@@ -1,12 +1,12 @@
 <sly data-sly-test="${wcmmode.edit}">Sample Component with Views</sly>
 <!-- Begin: Sample Component with Views -->
 <sly data-sly-test="!${wcmmode.edit}">
-    <div class="container-padding container-fixed smallMarginTop">
+    <div class="container-padding container-fixed">
       <div class="aem-Grid aem-Grid--12">
-        <div class="aem-GridColumn aem-GridColumn--default--12 aem-GridColumn--tablet--12 aem-GridColumn--phone--12">
-               <h2>${properties.heading}</h2>
-               <p>${properties.description}</p>
-               <p>Currently viewing -  ${properties.view}</p>
+        <div class="aem-GridColumn aem-GridColumn--default--12 eaton-component">
+               <h2 class="eaton-component--heading">${properties.heading} - ${properties.view}</h2>
+               <p class="eaton-component--small-text">Currently viewing -  <span>${properties.view}</span></p>
+               <p class="eaton-component--description">${properties.description}</p>
           </div>
       </div>
   </div>
