Create placeholder JS - Component + Configure in Clientlibs - js

--- a/eaton.ui.apps.html/src/main/content/jcr_root/apps/eaton/html-components/content/a-sample-component-views/a-sample-component-views.html
+++ b/eaton.ui.apps.html/src/main/content/jcr_root/apps/eaton/html-components/content/a-sample-component-views/a-sample-component-views.html
@@ -4,8 +4,8 @@
     <div class="container-padding container-fixed">
       <div class="aem-Grid aem-Grid--12">
         <div class="aem-GridColumn aem-GridColumn--default--12 eaton-component">
-               <h2 class="eaton-component--heading">${properties.heading} - ${properties.view}</h2>
-               <p class="eaton-component--small-text">Currently viewing -  <span>${properties.view}</span></p>
+               <h2 class="eaton-component--heading">${properties.heading}</h2>
+               <p class="eaton-component--small-text">Currently viewing variation -  <span>${properties.view}</span></p>
                <p class="eaton-component--description">${properties.description}</p>
           </div>
       </div>
