Feedback - Allow Dialogs to only have views - properties (text properties - hardcoded)

--- a/eaton.ui.apps.html/src/main/content/jcr_root/apps/eaton/html-components/content/a-sample-component-views/a-sample-component-views.html
+++ b/eaton.ui.apps.html/src/main/content/jcr_root/apps/eaton/html-components/content/a-sample-component-views/a-sample-component-views.html
@@ -4,9 +4,9 @@
     <div class="container-padding container-fixed">
       <div class="aem-Grid aem-Grid--12">
         <div class="aem-GridColumn aem-GridColumn--default--12 eaton-component">
-               <h2 class="eaton-component--heading">${properties.heading}</h2>
+               <h2 class="eaton-component--heading">Sample Component with multiple views.</h2>
                <p class="eaton-component--small-text">Currently viewing variation -  <span>${properties.view}</span></p>
-               <p class="eaton-component--description">${properties.description}</p>
+               <p class="eaton-component--description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi condimentum cursus ultrices. Nunc facilisis, leo eu scelerisque euismod, velit est viverra orci, eu semper eros ante et turpis. Mauris vitae quam eget eros malesuada convallis in eu quam.</p>
           </div>
       </div>
   </div>
