--- a/eaton.ui.apps.html/src/main/content/jcr_root/apps/eaton/html-components/content/a-tryout-component/a-tryout-component.html
+++ b/eaton.ui.apps.html/src/main/content/jcr_root/apps/eaton/html-components/content/a-tryout-component/a-tryout-component.html
@@ -1,4 +1,4 @@
-<div class="container-padding container-fixed smallMarginTop testimony">
+<div class="container-padding container-fixed smallMarginTop testimony ${properties.view}">
     <div id="testimonyContainer" class="aem-Grid aem-Grid--default--12 aem-Grid--tablet--8 aem-Grid--phone--1">
         <div class="aem-GridColumn aem-GridColumn--default--6 aem-GridColumn--tablet--4 aem-GridColumn--phone--1">
 	        <h2>Featured testimony</h2>
