--- a/eaton.ui.apps.html/src/main/content/jcr_root/apps/eaton/html-components/content/a-tryout-component/a-tryout-component.html
+++ b/eaton.ui.apps.html/src/main/content/jcr_root/apps/eaton/html-components/content/a-tryout-component/a-tryout-component.html
@@ -7,7 +7,7 @@
         <div id="testimonyContentContainer" class="aem-GridColumn aem-GridColumn--default--6 aem-GridColumn--tablet--4 aem-GridColumn--phone--1">
 	        <h4 id="testimonyPerson">John Smith</h4>
             <div id="testimonyPosition">CEO, Advance Inc.</div>
-            <div id="testimonyContent" class="smallMarginTop">"Eaton excelent products has improved our efficiency as a company and is helping us to maintaing a level of quality for our services that has been greatly praised by our clients."</div>
+            <div id="testimonyContent" class="smallMarginTop quote">"Eaton excelent products has improved our efficiency as a company and is helping us to maintaing a level of quality for our services that has been greatly praised by our clients."</div>
         </div>
     </div>
 </div>
