Minor style edit

--- a/eaton.ui.apps.html/src/main/content/jcr_root/apps/eaton/html-components/content/global-header/modules/utility-navigation.html
+++ b/eaton.ui.apps.html/src/main/content/jcr_root/apps/eaton/html-components/content/global-header/modules/utility-navigation.html
@@ -3,7 +3,7 @@
   background: #005EB8;
   padding: 10px 0;
 }
-.open-selector, .sign-in {
+.open-selector, .open-sign-in {
   color: white;
 }
 .country {
