--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/html-components/content/global-header/global-header.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/html-components/content/global-header/global-header.html
@@ -5,8 +5,8 @@
 <header>
     <div class="eaton-header">
         <!-- CONTENT MODULES -->
-        <div data-sly-include="modules/utility-navigation.html" />
-        <div data-sly-include="modules/primary-navigation.html" />
+        <div data-sly-unwrap data-sly-include="modules/utility-navigation.html" />
+        <div data-sly-unwrap data-sly-include="modules/primary-navigation.html" />
         <!-- / CONTENT MODULES -->
     </div>
 </header>
