--- a/eaton.ui.apps.html/src/main/content/jcr_root/apps/eaton/html-components/content/global-header/modules/utility-navigation.html
+++ b/eaton.ui.apps.html/src/main/content/jcr_root/apps/eaton/html-components/content/global-header/modules/utility-navigation.html
@@ -1,29 +1,29 @@
 <style>
-.utility-navigation {
-  background: #005EB8;
-  padding: 10px 0;
-}
-.open-selector, .open-sign-in {
-  color: white;
-}
-.country {
-  text-transform: uppercase;
-}
-.sign-in {
-  text-align: right;
-}
+    .header-utility-nav {
+      background: #005EB8;
+      padding: 10px 0;
+    }
+    .open-selector, .open-sign-in {
+      color: white;
+    }
+    .header-utility-nav__country {
+      text-transform: uppercase;
+    }
+    .header-utility-nav__sign-in {
+      text-align: right;
+    }
 </style>
 
-<div class="utility-navigation">
+<div class="header-utility-nav">
     <div class="container-fixed container-padding">
         <div class="row">
-            <div class="col-xs-12 col-md-8 country-language-selector">
+            <div class="col-xs-12 col-md-8 header-utility-nav__toggle-selector">
                 <a href="#" class="open-selector">
-                    <span class='country'>United States</span>
-                    <span class='language'>English</span>
+                    <span class='header-utility-nav__country'>United States</span>
+                    <span class='header-utility-nav__language'>English</span>
                 </a>
             </div>
-            <div class="col-xs-12 col-md-4 sign-in">
+            <div class="col-xs-12 col-md-4 header-utility-nav__sign-in">
                 <a href="#" class='open-sign-in'>Sign In</a>
             </div>
         </div>
