--- a/eaton.ui.apps.html/src/main/content/jcr_root/apps/eaton/html-components/content/global-header/modules/utility-navigation.html
+++ b/eaton.ui.apps.html/src/main/content/jcr_root/apps/eaton/html-components/content/global-header/modules/utility-navigation.html
@@ -17,13 +17,13 @@
 <div class="header-utility-nav">
     <div class="container-fixed container-padding">
         <div class="row">
-            <div class="col-xs-12 col-md-8 header-utility-nav__toggle-selector">
+            <div class="col-xs-9 header-utility-nav__toggle-selector">
                 <a href="#" class="open-selector">
                     <span class='header-utility-nav__country'>United States</span>
                     <span class='header-utility-nav__language'>English</span>
                 </a>
             </div>
-            <div class="col-xs-12 col-md-4 header-utility-nav__sign-in">
+            <div class="col-xs-3 header-utility-nav__sign-in">
                 <a href="#" class='open-sign-in'>Sign In</a>
             </div>
         </div>
