--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/header/static_header.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/header/static_header.html
@@ -1,8 +1,59 @@
+<style>
+    .header-utility-nav {
+      background: #005EB8;
+      padding: 10px 0;
+    }
+    .open-selector, .open-sign-in {
+      color: white;
+    }
+    .header-utility-nav__country {
+      text-transform: uppercase;
+    }
+    .header-utility-nav__sign-in {
+      text-align: right;
+    }
+
+    .header-primary-nav {
+        height: 100px;
+        background: white;
+        border-bottom: 1px solid #005EB8;
+        padding: 30px 0;
+    }
+</style>
+
 <header>
     <div class="eaton-header">
         <!-- CONTENT MODULES -->
-        <div data-sly-unwrap data-sly-include="../utility-navigation/utility-navigation.html" />
-        <div data-sly-unwrap data-sly-include="../primary-navigation/primary-navigation.html" />
+        <!-- Utility Navigation -->
+        <div class="header-utility-nav">
+            <div class="container-fixed container-padding">
+                <div class="row">
+                    <div class="col-xs-9 header-utility-nav__toggle-selector">
+                        <a href="#" class="open-selector">
+                            <span class='header-utility-nav__country'>United States</span>
+                            <span class='header-utility-nav__language'>English</span>
+                        </a>
+                    </div>
+                    <div class="col-xs-3 header-utility-nav__sign-in">
+                        <a href="#" class='open-sign-in'>Sign In</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Include: Full Page Drawer -->
+        <div data-sly-unwrap data-sly-include="../full-page-drawer/full-page-drawer.html" />
+
+        <!-- Primary Navigation -->
+        <div class="header-primary-nav">
+            <div class="container-fixed container-padding">
+                <div class="row">
+                    <div class="col-xs-12">
+                        Primary Nav Goes here
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- / CONTENT MODULES -->
     </div>
 </header>
