Full Page Drawer — .content-xml + use `resource` to include nested components

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/header/static_header.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/header/static_header.html
@@ -42,7 +42,7 @@
         </div>
 
         <!-- Include: Full Page Drawer -->
-        <div data-sly-unwrap data-sly-include="../full-page-drawer/full-page-drawer.html" />
+        <sly data-sly-resource="${'full-page-drawer' @ resourceType='eaton/static-components/structure/full-page-drawer'}"></sly>
 
         <!-- Primary Navigation -->
         <div class="header-primary-nav">
