--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/full-page-drawer/static_full-page-drawer.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/full-page-drawer/static_full-page-drawer.html
@@ -1,6 +1,9 @@
 <style>
+  p {
+    margin-bottom: 10px;
+  }
+  
   .full-page-drawer {
-      height: 300px;
       background: #5B6770;
       border-bottom: 1px solid #005EB8;
       padding: 30px 0;
@@ -13,7 +16,9 @@
     <div class="container-fixed container-padding">
         <div class="row">
             <div class="col-xs-12">
-                Full page Drawer
+              <!-- Include: Country Selector -->
+              <p>Full Page Drawer</p>
+              <sly data-sly-resource="${'country-selector' @ resourceType='eaton/static-components/content/country-selector'}"></sly>
             </div>
         </div>
     </div>
