Mega Menu - Include container & rows to properly align the inner sections (menu contents)

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/header/static_header.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/header/static_header.html
@@ -54,6 +54,9 @@
                 </div>
             </div>
         </div>
+
+        <!-- Include: Mega Menu -->
+        <sly data-sly-resource="${'mega-menu' @ resourceType='eaton/static-components/structure/mega-menu'}"></sly>
         <!-- / CONTENT MODULES -->
     </div>
 </header>
