--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/pages/mega-menu-support.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/pages/mega-menu-support.html
@@ -1,5 +1,5 @@
 <style>
-    div {
+    .mega-menu__content {
       background: #EEF0F2;
       padding: 20px 0;
       color: white;
@@ -7,6 +7,6 @@
     }
 </style>
 
-<div class="col-xs-12">
+<div class="col-xs-12 mega-menu__content">
     Support: Menu
 </div>
