--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/pages/mega-menu-company.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/pages/mega-menu-company.html
@@ -1,11 +1,11 @@
 <style>
-    div {
+    .mega-menu__content  {
       background: #EEF0F2;
       padding: 20px 0;
       color: white;
     }
 </style>
 
-<div class="col-xs-12">
+<div class="col-xs-12 mega-menu__content ">
     Company: Menu
 </div>
