--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/pages/mega-menu-company.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/pages/mega-menu-company.html
@@ -1,11 +1,15 @@
 <style>
     .mega-menu__content  {
       background: #EEF0F2;
-      padding: 20px 0;
-      color: white;
+      padding: 20px;
+      color: #005EB8;
+    }
+
+    .mega-menu--no-margin {
+      margin-bottom: 0;
     }
 </style>
 
-<div class="col-xs-12 mega-menu__content ">
+<div class="col-xs-12 mega-menu__content mega-menu--no-margin">
     Company: Menu
 </div>
