--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/pages/mega-menu-support.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/pages/mega-menu-support.html
@@ -1,8 +1,8 @@
 <style>
     .mega-menu__content {
       background: #EEF0F2;
-      padding: 20px 0;
-      color: white;
+      padding: 20px;
+      color: #005EB8;
       margin-bottom: 20px;
     }
 </style>
