[m-7] Footer - Added dev comments + Cleanup

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/footer/static_footer.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/footer/static_footer.html
@@ -64,27 +64,12 @@
 </footer>
 
 
-<div class="header">
-  <div data-sly-include="../../components/links/views/vertical.html"></div>
-</div>
+
 
 <style>
 
-
-
 /**
-* Color Palette
-*/
-/*
-  top-bg: #5B6770;
-  bottom-bg: #333F48;
-  color-text: #FFF;
-*/
-
-
-
-/**
-* Styleguide
+* Styleguide: Mobile
 */
 body {
   font-family: 'Arial', sans-serif;
@@ -112,6 +97,10 @@ body {
 }
 
 
+
+/**
+* LinkList Component
+*/
 .eaton-link-list { }
 
 .eaton-link-list__list {
@@ -129,6 +118,10 @@ body {
 
 
 
+
+/**
+* Styleguide: Desktop
+*/
 @media screen (min-width: 1200px) {
 
   .body-copy-small,
@@ -141,8 +134,8 @@ body {
     font-size: 18px;
     line-height: 24px;
   }
-}
 
+}
 
 
 
@@ -158,23 +151,6 @@ body {
   background: #333F48;
 }
 
-.footer-bottom__nav {
-  list-style-type: none;
-  padding: 0;
-}
-
-.footer-bottom__nav-item {
-  display: inline-block;
-  list-style-type: none;
-}
-
-.footer-bottom__nav-item::after {
-  border-right: 1px solid #FFF;
-}
-
-.footer-bottom__nav-link {
-  padding: 0 1em;
-}
 
 
 </style>
