Include styles - in static file

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/static_mega-menu.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/static_mega-menu.html
@@ -3,13 +3,24 @@
         background: #333F48;
         padding: 30px 0;
     }
+    
+    .mega-menu__content  {
+      background: #EEF0F2;
+      padding: 20px;
+      color: #005EB8;
+    }
+
+    .mega-menu--no-margin {
+      margin-bottom: 0;
+    }
+
 </style>
 
 <section class="mega-menu">
     <div class="container-fixed container-padding">
         <div class="row">
             <!-- CONTENT MODULES -->
-            
+
             <!-- Include: Mega-Menu-Products -->
             <div data-sly-include="pages/mega-menu-products.html" />
 
