--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/full-page-drawer/static_full-page-drawer.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/full-page-drawer/static_full-page-drawer.html
@@ -9,6 +9,14 @@
       padding: 30px 0;
       color: white;
   }
+
+  @media (max-width: 768px) {
+      .full-page-drawer {
+          position: fixed;
+          top: 100%;
+          width: 100%;
+      }
+  }
 </style>
 
 <!-- Full Page Drawer -->
