--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/header/static_header.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/header/static_header.html
@@ -19,6 +19,16 @@
         border-bottom: 1px solid #005EB8;
         padding: 30px 0;
     }
+
+    @media (max-width: 768px) {
+        .header-utility-nav {
+          position: fixed;
+          bottom: 0;
+          z-index: 1;
+          width: 100%;
+          right: 0;
+        }
+    }
 </style>
 
 <header>
