--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/static_mega-menu.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/static_mega-menu.html
@@ -3,15 +3,28 @@
         background: #333F48;
         padding: 30px 0;
     }
-    
+
     .mega-menu__content  {
       background: #EEF0F2;
       padding: 20px;
       color: #005EB8;
+      margin-bottom: 20px;
     }
 
     .mega-menu--no-margin {
       margin-bottom: 0;
+    }
+
+    @media (max-width: 768px) {
+        .mega-menu {
+          position: fixed;
+          width: 100%;
+          top: 100px;
+          bottom: 42px;
+          transition: all 0.3s ease-in-out; /* transform: translate(100%); */
+          overflow: auto;
+          visibility: hidden; /* visibility: visible */
+        }
     }
 
 </style>
