Mega Menu - Slide using transform

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/static_mega-menu.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/static_mega-menu.html
@@ -21,9 +21,11 @@
           width: 100%;
           top: 100px;
           bottom: 42px;
-          transition: all 0.3s ease-in-out; /* transform: translate(100%); */
+          transition: left 0.7s ease-in-out;
           overflow: auto;
-          visibility: hidden; /* visibility: visible */
+          visibility: visible;
+          /*visibility: visible;
+          transform: translate(100%);*/
         }
     }
 
