--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/eaton-base-page/customfooterlibs.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/eaton-base-page/customfooterlibs.html
@@ -15,4 +15,4 @@
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/-->
 
 <sly data-sly-use.clientlib="/libs/granite/sightly/templates/clientlib.html">
-<sly data-sly-call="${clientlib.js @ categories='eaton-all'}"/>
+<sly data-sly-call="${clientLib.js @ categories='eaton-all'}" data-sly-unwrap/>
