--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link/static_title-text-image-link.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link/static_title-text-image-link.html
@@ -6,3 +6,7 @@
     <h1>${ttil.title}</h1>
     <p>${ttil.text}</p>
 </div>
+
+<sly data-sly-test="${properties.view != 'l2-hero'}">
+    <div data-sly-include="views/l2-hero.html"></div>    
+</sly>
