--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/featured-topic/static_featured-topic.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/featured-topic/static_featured-topic.html
@@ -1,32 +1,32 @@
 <sly data-sly-test="${wcmmode.edit}">Featured Topic</sly>
 
 <!--/* BEGIN M-28 Featured Topic Component */ -->
-<sly data-sly-test="!${wcmmode.edit}" data-sly-use.ft="js/title-text-image-link-data.js" >
-  <div class="m-featured-topic" >
+<sly data-sly-test="!${wcmmode.edit}" data-sly-use.ft="title-text-image-link-data.js" >
+  <div class="eaton-featured-topic" >
     <div class="row">
       <div class="col-sm-12">
-        <h2 class="m-featured-topic__title">${ft.title}</h2>
-        <div class="m-featured-topic__paragraph body-copy">
-          ${ft.paragraph}
+        <h2 class="eaton-featured-topic__title">${featuredTopic.title}</h2>
+        <div class="eaton-featured-topic__paragraph body-copy">
+          ${featuredTopic.paragraph}
         </div>
       </div>
     </div>
     <div class="row">
       <!-- TODO: check if can reuse -->
-      <div class="m-link-list col-md-6">
-        <h4 class="m-link-list__title" >${ft.leftList.title}</h4>
-        <ul class="m-link-list--no-list-style" >
-          <li data-sly-list="${ft.leftList.items}">
+      <div class="eaton-link-list col-md-6">
+        <h4 class="eaton-link-list__title" >${featuredTopic.leftList.title}</h4>
+        <ul class="eaton-link-list--no-list-style" >
+          <li data-sly-list="${featuredTopic.leftList.items}">
             <a class="h5-link" aria-label="Go to" href="${item.href}">${item.title}</a>
           </li>
         </ul>
       </div>
 
       <!-- TODO: check if can reuse -->
-      <div class="m-link-list col-md-6">
-        <h4 class="m-link-list__title">${ft.rightList.title}</h4>
-        <ul  class="m-link-list--no-list-style" >
-          <li data-sly-list="${ft.leftList.items}">
+      <div class="eaton-link-list col-md-6">
+        <h4 class="eaton-link-list__title">${featuredTopic.rightList.title}</h4>
+        <ul  class="eaton-link-list--no-list-style" >
+          <li data-sly-list="${featuredTopic.leftList.items}">
             <a class="h5-link" aria-label="Go to" href="${item.href}">${item.title}</a>
           </li>
         </ul>
@@ -34,8 +34,8 @@
     </div>
     <div class="row">
       <div class="col-sm-12 u-text-center">
-        <a href="${ft.ctaHref}" aria-label="Go to" class="b-button b-button--secondary b-button--light">
-          ${ft.ctaText}
+        <a href="${featuredTopic.ctaHref}" aria-label="Go to" class="b-button b-button--secondary b-button--light">
+          ${featuredTopic.ctaText}
         </a>
       </div>
     </div>
