--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/header/header.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/header/header.html
@@ -1,4 +1,4 @@
 
 <!-- Integrated code goes here -->
 
-<div data-sly-include="static_header.html"></div>
+<sly data-sly-include="static_header.html"></sly>
