Basic styles (Mobile) - Mega Menu (Open Close)

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/static_mega-menu.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/static_mega-menu.html
@@ -41,16 +41,16 @@
             <!-- CONTENT MODULES -->
 
             <!-- Include: Mega-Menu-Products -->
-            <div data-sly-include="pages/mega-menu-products.html" />
+            <sly data-sly-include="pages/mega-menu-products.html" />
 
             <!-- Include: Mega-Menu-Support -->
-            <div data-sly-include="pages/mega-menu-support.html" />
+            <sly data-sly-include="pages/mega-menu-support.html" />
 
             <!-- Include: Mega-Menu-Services -->
-            <div data-sly-include="pages/mega-menu-services.html" />
+            <sly data-sly-include="pages/mega-menu-services.html" />
 
             <!-- Include: Mega-Menu-Company -->
-            <div data-sly-include="pages/mega-menu-company.html" />
+            <sly data-sly-include="pages/mega-menu-company.html" />
 
             <!-- / CONTENT MODULES -->
         </div>
