--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/header/static_header.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/header/static_header.html
@@ -71,7 +71,7 @@
         height: 100px;
         background: white;
         border-bottom: 1px solid #005EB8;
-        padding: 30px 0;
+        padding: 20px 0;
     }
 
     @media (max-width: 991px) {
@@ -81,6 +81,14 @@
           z-index: 1;
           width: 100%;
           right: 0;
+          opacity: 0;
+          visibility: hidden;
+          transition: opacity 0.5s ease-in-out;
+        }
+
+        .nav-open .header-utility-nav {
+            opacity: 1;
+            visibility: visible;
         }
     }
 </style>
