removing some typos in code

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/featured-topic/static_featured-topic.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/featured-topic/static_featured-topic.html
@@ -1,7 +1,7 @@
 <sly data-sly-test="${wcmmode.edit}">Featured Topic</sly>
 
 <!--/* BEGIN M-28 Featured Topic Component */ -->
-<sly data-sly-test="!${wcmmode.edit}" data-sly-use.ft="title-text-image-link-data.js" >
+<sly data-sly-test="!${wcmmode.edit}" data-sly-use.featuredTopic="featured-topic-data.js" >
   <div class="eaton-featured-topic" >
     <div class="row">
       <div class="col-sm-12">
